--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-server.port = 8887
+server.port = 8080
+
+
+
+github.client.id = 716c162888e90c820d69
+github.client.secret = 98c03ec06ec1e96112ebbba7e35c4fecfe2b7ea9
+github.redirect.url = http://127.0.1.1:8080/callback
