--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 server.port = 8080
 
-
-
 github.client.id = 716c162888e90c820d69
 github.client.secret = 98c03ec06ec1e96112ebbba7e35c4fecfe2b7ea9
 github.redirect.url = http://127.0.1.1:8080/callback
+
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/community?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+
+#使用h2数据库
+#spring.datasource.username=sa
+#spring.datasource.password=123
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasodurce.url=jdbc:mysql://localhost/test?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
